Github does not support index.php -- can only be index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,18 @@
 
         </div> <!--content-->
 
-        <?php include 'pages/templates/footer.php' ?>
+
+        <!--<?php //include 'pages/templates/footer.php' ?>-->
+        <div id="footer">
+            <p class="italic">
+                The pictures on this site which are not credited were taken by my father.
+            </p>
+
+            <p>
+                @2015 by Hengzhi Yao <br>
+            </p>
+
+        </div>
 
 
     </div> <!--container-->
