--- a/pages/courses.html
+++ b/pages/courses.html
@@ -8,7 +8,24 @@
 </head>
 <body>
 
-    <?php include 'templates/banner.php' ?>
+    <!--<?php include 'templates/banner.php' ?>-->
+    <div id="banner">
+
+        <h1>Hengzhi YAO</h1>
+
+        <div id="nav">
+            <span><a href="">Home</a>  </span>
+
+            <span><a href="projects.html">Projects</a>  </span>
+            <span><a href="courses.html">Courses</a>  </span>
+            <span><a href="traveling.html">Hobbies</a>  </span>
+            <span><a href="contact.html">Contact</a>  </span>
+            <span><a href="https://www.linkedin.com/in/hengzhiyao">LinkedIn</a>  </span>
+        </div>
+
+
+    </div>  <!-- banner-->
+
 
     <div id="container">
 
@@ -55,7 +72,17 @@
         </div>  <!--content-->
 
 
-        <?php include 'templates/footer.php' ?>
+        <!--<?php include 'templates/footer.php' ?>-->
+        <div id="footer">
+            <p class="italic">
+                The pictures on this site which are not credited were taken by my father.
+            </p>
+
+            <p>
+                @2015 by Hengzhi Yao <br>
+            </p>
+
+        </div>
 
     </div> <!--container-->
 
