Small bugs, minor changes.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     <!--note: img tag is Inline, so cannot put outside of <p> etc.!! -->
                 </p>
 
-                <div>
-                    <p class="italic"> <i>The picture was taken by my father.</i> </p>
-                </div>
+                <!--<div>-->
+                    <!--<p class="italic"> <i>The picture was taken by my father.</i> </p>-->
+                <!--</div>-->
 
             </div>  <!-- image-->
 
