--- a/pages/traveling.html
+++ b/pages/traveling.html
@@ -14,7 +14,7 @@
         <h1>Hengzhi YAO</h1>
 
         <div id="nav">
-            <span><a href="">Home</a>  </span>
+            <span><a href="../index.html">Home</a>  </span>
 
             <span><a href="projects.html">Projects</a>  </span>
             <span><a href="courses.html">Courses</a>  </span>
